--- a/site/profile/templates/postfix_virtual_aliases.erb
+++ b/site/profile/templates/postfix_virtual_aliases.erb
@@ -1,4 +1,4 @@
 # This file managed by Puppet
-<% @postfix_virtual.each do |value| %>
+<% @postfix_virtual_aliases.each do |value| %>
 <%= value -%>
 <% end %>
